--- a/love/src/components/navbar/Navbar.scss
+++ b/love/src/components/navbar/Navbar.scss
@@ -22,6 +22,8 @@ $font-roboto: "Roboto", sans-serif;
         justify-content: space-evenly;
         font-size: 15px;
         font-family: $font-roboto;
+        color: black;
+        text-decoration: none;
 
         &:hover{
             cursor: pointer;
